[package]
name = "quote-it"
version = "0.1.0"
authors = ["Rafayel Amirkhanyan <rafayel.amirkhanyan@gmail.com>"]
description = "A quoting utility in the terminal"
readme = "README.md"
repository = "https://github.com/Gitter499/quote-it-rs"
license-file = "LICENSE"
keywords = ["CLI", "Quotes", "Fun"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
homedir = "0.3.3"
polodb_core = "4.4.2"
serde = { version = "1.0.204", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
